# Sub_cipher

./: LICENSE  Substitution_cipher.py  bigram_out.txt  bigram_out_encoded  cipher_crack.py  dokumentace_MH_decipher.docx  final.py  jupyter_apl.py  krakatit.txt  mHAlgorithmCypherCrack.py  mHalgorithmCypherCrack.py  main.py  notebook.html  notebook.ipynb  pyproject.toml  valka s mloky.txt
bigram/: bigram.py  text_prep.py
bigram/Testovaci_soubory/: text_1000_sample_20_key.txt  text_250_sample_2_key.txt  text_250_sample_2_plaintext.txt
bigram/export/: text_1000_sample_20_key.txt  text_250_sample_1_key.txt  text_250_sample_1_plaintext.txt  text_250_sample_3_key.txt  text_250_sample_3_plaintext.txt
dmytro/: final.py  mh algoritmus.py  plausability.py  substitute_decrypt.py
tests/: test_bigram.py
