[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "Sub_cipher"
version         = "0.1.0"
description     = "Simple substitutional text encryption and decryption application"
authors         = [{ name = "Vaclav Nekuza", email = "vaclav.nekuza@outlook.com" }]
readme          = "README.md"
license         = { text = "MIT" }
requires-python = ">=3.11"
classifiers     = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Vaclav-Nekuza/Sub_cipher"
